# autodoc

./: .gitignore  MY_DOCUMENTATION.md  README.md  config.py  pyproject.toml  setup.py
autodoc/: config.py  generateDoc.py  main.py
autodoc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
autodoc/.autodoc/: config
