[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodoc"
version = "0.1.0"
description = "A tool to automatically generate documentation for projects using Gemini API"
authors = [{name = "Alabi Ayobami", email = "arocket04@gmail.com"}]
requires-python = ">=3.6"
dependencies = [
    "requests>=2.25.0"
]
keywords = ["documentation", "generator", "gemini", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.scripts]
autodoc = "autodoc.main:main"
autodoc-config = "autodoc.config:configure_api_key"

[tool.setuptools]
packages = ["autodoc"]

 

